--- a/EntrepreneurshipSchoolBackend/Properties/launchSettings.json
+++ b/EntrepreneurshipSchoolBackend/Properties/launchSettings.json
@@ -14,7 +14,8 @@
       "launchBrowser": true,
       "applicationUrl": "http://localhost:5107",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "DB_CONNECTION_STRING": "host=localhost;port=5432;database=database;username=admin;password=password"
       }
     },
     "https": {
