--- a/EntrepreneurshipSchoolBackend/EntrepreneurshipSchoolBackend.csproj
+++ b/EntrepreneurshipSchoolBackend/EntrepreneurshipSchoolBackend.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
       <PackageReference Include="LinqKit" Version="1.2.4" />
+      <PackageReference Include="MailKit" Version="4.1.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.9">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
