--- a/EntrepreneurshipSchoolBackend/EntrepreneurshipSchoolBackend.csproj
+++ b/EntrepreneurshipSchoolBackend/EntrepreneurshipSchoolBackend.csproj
@@ -16,6 +16,7 @@
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
+      <PackageReference Include="Quartz.AspNetCore" Version="3.7.0" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     </ItemGroup>
 
