--- a/EntrepreneurshipSchoolBackend/docker-compose.yml
+++ b/EntrepreneurshipSchoolBackend/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     ports:
       - "8000:80"
     environment:
-      DB_CONNECTION_STRING: "host=database;port=5432;database=database;username=admin;password=password"
+      DB_CONNECTION_STRING: "host=database;port=5432;database=database;username=admin;password=9a72cOV&pEW1"
       ASPNETCORE_ENVIRONMENT: "Development"
     networks:
       - backend-dev
@@ -27,11 +27,9 @@ services:
     environment:
       POSTGRES_DB: "database"
       POSTGRES_USER: "admin"
-      POSTGRES_PASSWORD: "password"
+      POSTGRES_PASSWORD: "9a72cOV&pEW1"
       PGDATA: "/var/lib/postgresql/data/pgdata"
     volumes:
       - ./docker/db/data/database/:/var/lib/postgresql/data/
-    ports:
-      - "5432:5432"
     networks:
       - backend-dev
